# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-rules"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Rule trait definitions for marque — the contract every rule crate implements"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[dependencies]
# PR 3c.2.D (T046) — content-ignorant audit-record digesting per
# Constitution V Principle V (G13). `AppliedFix.__engine_promote` calls
# `blake3::hash(original_bytes)` and `Canonical::bytes()` is digested
# the same way; both digests land in the `marque-1.0` audit envelope
# via `AppliedFixDetail.original_digest` and
# `AppliedReplacement.bytes_digest`. `default-features = false` +
# `features = ["pure"]` selected at the workspace dep to keep the
# WASM-safe set (Constitution III) buildable for `wasm32-unknown-unknown`
# without platform intrinsics.
blake3 = { workspace = true }
marque-ism = { workspace = true }
# PR 3c.1 (T040) — direct edge anticipated by Constitution VII §VII Appendix
# D ("As of PR 3c (FixIntent<S>), marque-rules also depends on marque-scheme
# directly so rule-emission values can reference scheme types without going
# through marque-ism; the graph stays acyclic because marque-scheme is still
# leaf-only.")
marque-scheme = { workspace = true }
# Issue #699 — `Diagnostic.recognized_canonical` carries the decoder's
# canonical bytes in a `SecretBox<Box<[u8]>>` so the field obeys
# Constitution Principle II (Marque-owned content wipes on drop; every
# readout site goes through `expose_secret()` and is grep-auditable for
# security review). The field is lint-side only — never serialized into
# the audit envelope (Constitution V Principle V / G13). See the field's
# doc comment for the asymmetry rationale.
secrecy = { workspace = true }
serde = { workspace = true, optional = true }
# PR 3c.1 (T032/T037) — MessageArgs.feature_ids and FixIntent.feature_ids
# both use SmallVec<[FeatureId; 4]> to keep the inline-4 case heap-free.
smallvec = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []
serde = ["dep:serde", "marque-ism/serde"]

[lints]
workspace = true
