# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-scheme"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Domain-neutral trait surface for structured marking schemes (lattice + constraints + projection + local ambiguity)."
repository.workspace = true
license-file = "LICENSE.md"

# Published tarball contents — strictly the source and docs.
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[dependencies]
serde = { workspace = true, optional = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
