# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-scheme"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Domain-neutral trait surface for structured marking schemes (lattice + constraints + projection + local ambiguity)."
repository.workspace = true
license-file = "LICENSE.md"

# Published tarball contents — strictly the source and docs.
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[dependencies]
serde = { workspace = true, optional = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
# Marker for engine-side threading of `DecisionSink` instrumentation.
# The types in `marque_scheme::decision` always compile; this feature
# only gates whether the engine threads a non-`NoopSink` through its
# evaluator. Off-mode has zero hot-path cost.
decision-tracing = []

[lints]
workspace = true
