# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-server"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "REST microservice exposing marque as an API"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[[bin]]
name = "marque-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
# `form_urlencoded` is used by `reject_if_corpus_override` to
# percent-decode query parameter names so `?corpus%5foverride=1`
# cannot bypass the T3 guard. Already present in the dependency tree
# via axum; declared directly so the dependency is visible.
form_urlencoded = "1.2"
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true, features = ["batch"] }
marque-extract = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
