# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-server"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "REST microservice exposing marque as an API"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[[bin]]
name = "marque-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
# `form_urlencoded` is used by `reject_if_corpus_override` to
# percent-decode query parameter names so `?corpus%5foverride=1`
# cannot bypass the T3 guard. Already present in the dependency tree
# via axum; declared directly so the dependency is visible.
form_urlencoded = "1.2"
marque-capco = { workspace = true }
# Server loads `.marque.toml` / `.marque.local.toml`; opt in to the toml chain
# the workspace pin keeps off by default (so the WASM build can exclude it).
marque-config = { workspace = true, features = ["toml-loader"] }
marque-engine = { workspace = true, features = ["batch"] }
marque-extract = { workspace = true }
# Server opts into jiff-backed date validation; the workspace pin keeps
# `default-features = false` so the WASM build inherits the hand-rolled
# Gregorian path (issue #455). The server doesn't import `IsmDate`
# directly, but feature unification means this turns `dates` on for the
# whole native build graph (marque-engine, marque-capco, marque-core).
marque-ism = { workspace = true, features = ["dates"] }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
# Constitution Principle II — readout discipline at the HTTP response
# boundary. `FixResult.source` is `SecretBox<[u8]>`; `expose_secret()`
# calls in the fix-route handler are the grep target.
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.4"
