# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-test-utils"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Shared test utilities and corpus loader for marque"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
