# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "WASM target for marque — web worker and browser integration"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# alias for release
[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = [
  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-gc",
  "--enable-multi-value",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-tail-call",
  "--enable-threads",
  "--enable-typed-function-references",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
]

[package.metadata.wasm-pack.profile.release-cloud]
wasm-opt = [
  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-gc",
  "--enable-multi-value",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-relaxed-simd",
  "--enable-tail-call",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
humantime = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-engine = { workspace = true, default-features = false }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
talc = { version = "5.0.3", optional = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# marque-extract intentionally excluded — format extraction is caller's
# responsibility in WASM context; core operates on pre-extracted text.

[features]
# NOTE: This is mostly pre-wiring for future features; we don't currently have any SIMD128-specific code paths (heavy SIMD optimizations in main codebase), nor have we added multi-threading support yet; but this allows us to enable those features in the future without breaking changes, and also allows users to opt into SIMD128 support for cloud environments where it's available.
default = ["talc_alloc", "web"]

talc = ["dep:talc"]
talc_alloc = ["talc"]

cloud = ["simd128"]
cloud_talc = ["cloud", "talc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
multi-threading = []
simd128 = []
# Features for browser and web worker targets; which provides support for SIMD, multi-threading, and other WASM features as available in modern browsers.
web = ["console_error_panic_hook", "multi-threading", "simd128"]

[lints]
workspace = true
