# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "WASM target for marque — web worker and browser integration"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# alias for release
[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = [
  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-gc",
  "--enable-multi-value",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-tail-call",
  "--enable-threads",
  "--enable-typed-function-references",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
]

[package.metadata.wasm-pack.profile.release-cloud]
wasm-opt = [
  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-gc",
  "--enable-multi-value",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-relaxed-simd",
  "--enable-tail-call",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
humantime = { workspace = true }
# `marque-config` and `marque-engine` are pinned at the workspace level
# with `default-features = false` (see workspace Cargo.toml). Today
# `marque-config`'s default feature set is empty so the pin is a
# no-op, but if a future change adds `corpus-override` (or any other
# gated feature inappropriate for WASM) to either crate's defaults,
# the workspace-level pin closes that channel; the secondary
# `compile_error!` in `src/lib.rs` stays as a third line of defense.
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-engine = { workspace = true, default-features = false }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
spinning_top = { version = "0.3.0", optional = true }
talc = { version = "5.0.3", optional = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# T088 — `wasm-pack test --node` parity harness uses wasm-bindgen-test
# to drive `lint_native` from inside the wasm32 target. Native parity
# (`tests/native_parity.rs`) covers algorithmic equivalence; this
# dev-dep enables byte-equal NDJSON parity across the actual WASM
# compilation target. Pinned via `=` to the version that the parity
# harness was verified against and the version Cargo.lock currently
# resolves. Tracks wasm-bindgen 0.2.118.
wasm-bindgen-test = "=0.3.68"

# marque-extract intentionally excluded — format extraction is caller's
# responsibility in WASM context; core operates on pre-extracted text.

[features]
# SIMD128 is enabled via the rustc target-feature flag in .cargo/config.toml rather than
# a Cargo feature — wasm-opt's `--enable-simd` is a post-processing pass that can only
# optimize SIMD instructions already present in the binary; it cannot generate them.
# The .cargo/config.toml entry sets `-C target-feature=+simd128` for wasm32-unknown-unknown,
# which activates SIMD code paths in memchr and other SIMD-aware crates at compile time.
#
# Phase-C–E boundary: the `corpus-override` feature MUST NOT be declared
# here, and `marque-engine` above is pinned to `default-features = false`,
# so the override codepath cannot reach this artifact. Enforced further at
# T067 with a `compile_error!` guard under
# `#[cfg(all(target_arch = "wasm32", feature = "corpus-override"))]` in
# `src/lib.rs` — redundant with the missing-feature-declaration path, but
# closes the door a second time so an inadvertent future commit cannot
# drift this invariant silently (Constitution III + FR-013 + T3).
default = ["web"]

# Single-threaded allocator: WasmDynamicTalc grows via memory.grow, no spinlock overhead.
# Correct for browser web workers and single-threaded cloud deployments.
# When both talc_alloc and multi-threading are active, TalcLock takes precedence
# (see the cfg conditions in src/lib.rs).
talc_alloc = ["dep:talc"]

# Multi-threaded allocator: TalcLock with spinning_top. Requires SharedArrayBuffer
# (COOP + COEP response headers on the serving page) and the atomics target feature.
multi-threading = ["dep:spinning_top", "dep:talc"]

# Browser web worker target — panic hook + single-threaded WasmDynamicTalc.
web = ["console_error_panic_hook", "talc_alloc"]

# Cloud deployment profile — single-threaded WasmDynamicTalc, no panic hook.
cloud = ["talc_alloc"]

# Cloud + multi-threading: TalcLock for SharedArrayBuffer-capable cloud runtimes.
cloud_talc = ["cloud", "multi-threading"]

console_error_panic_hook = ["dep:console_error_panic_hook"]

# Debug allocator with heap counters (allocation/deallocation metrics via talc/counters).
# Uses TalcLock so counter access is safe from any thread; most useful in a browser
# devtools session. Enables console_error_panic_hook for readable panic messages.
talc_debug = ["console_error_panic_hook", "dep:spinning_top", "dep:talc", "talc/counters"]

[lints]
workspace = true
