# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0
#:tombi schema.strict = false

[package]
name = "marque-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "WASM target for marque — web worker and browser integration"
# Inlined (not `repository.workspace = true`) — wasm-pack 0.15.0+ parses
# the manifest with a TOML reader that doesn't resolve Cargo's workspace
# inheritance for `package.repository` and fails with
# `invalid type: map, expected a string for key 'package.repository'`.
# Other inherited fields (`edition`, `rust-version`) are not affected.
# Keep the value in lock-step with workspace `Cargo.toml [workspace.package].repository`.
repository = "https://github.com/marquetools/marque"
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

# wasm-pack only supports three profiles -- dev, profiling, release
# We use the profiling profile as a baseline build
# Then we optimize from there for release builds
# We have to do this to avoid an issue with wasm-pack's handoff with wasm-opt
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["--all-features"]

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
dwarf-debug-info = false
split-linked-modules = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--all-features"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--all-features"]

# Are these profiles over-the-top?  Yes.
# The cost in build time is marginal for deployment-long (potential) benefit.
[package.metadata.wasm-pack.profile.release-web]
wasm-opt = [  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-multivalue",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-tail-call",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
  "-O4",
]

[package.metadata.wasm-pack.profile.release-web.wasm-bindgen]
split-linked-modules = true

[package.metadata.wasm-pack.profile.release-monoaudit]
# Mirrors `release-web` optimization sequencing while preserving
# symbol attribution for `twiggy monos` by omitting
# `--strip-toolchain-annotations` and enabling DWARF below.
wasm-opt = [
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-multivalue",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-tail-call",
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "-O4",
]

[package.metadata.wasm-pack.profile.release-monoaudit.wasm-bindgen]
split-linked-modules = true
# Preserve debug names so `twiggy monos` can attribute monomorphizations.
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release-cloud]
wasm-opt = [
  # tool options:
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-multivalue",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd",
  "--enable-relaxed-simd",
  "--enable-tail-call",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
  "-O4",
]

# optimizations for multi-threaded deployments; requires atomics
[package.metadata.wasm-pack.profile.release-server]
wasm-opt = [
  "--enable-bulk-memory-opt",
  "--enable-bulk-memory",
  "--enable-extended-const",
  "--enable-multivalue",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-threads",
  "--enable-simd",
  "--enable-relaxed-simd",
  "--enable-tail-call",

  # optimization passes:
  "--type-refining-gufa",
  "--generate-global-effects",
  "-O3",
  "--monomorphize",
  "--precompute-propagate",
  "--low-memory-unused",
  "--gufa",
  "-O3",
  "--converge",
  "--strip-toolchain-annotations",
  "-O4",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `blake3::Hash` is the wire type for the current audit-record schema
# `original_digest` / `bytes_digest` fields. The WASM renderer formats
# `blake3:<hex>` byte-identical to the CLI surface. The workspace pin
# carries `default-features = false, features = ["pure"]` so the WASM
# build path is pure-Rust (no SIMD asm); Constitution III WASM-safety
# preserved.
blake3 = { workspace = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
humantime = { workspace = true }
# `marque-config` and `marque-engine` are pinned at the workspace level
# with `default-features = false` (see workspace Cargo.toml). Today
# `marque-config`'s default feature set is empty so the pin is a
# no-op, but if a future change adds `corpus-override` (or any other
# gated feature inappropriate for WASM) to either crate's defaults,
# the workspace-level pin closes that channel; the secondary
# `compile_error!` in `src/lib.rs` stays as a third line of defense.
#
# `marque-capco` is already transitive via `marque-engine` (verified
# `cargo tree`: marque-engine → marque-capco). The direct dep entry
# here is intentional — `src/lib.rs` imports `CapcoScheme` and the
# WASM lib's public API references `Diagnostic<CapcoScheme>` /
# `AppliedFix<CapcoScheme>` directly, so listing it as a direct
# runtime dep makes that surface explicit rather than relying on a
# silent transitive import. Constitution III: `marque-capco` is in
# the WASM-safe set (scheme + ism + rules + core + capco), so no
# surface expansion vs. the transitive shape.
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
marque-engine = { workspace = true, default-features = false }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
# Constitution Principle II — readout discipline at the WASM ↔ JS boundary.
# `FixResult.source` is `SecretBox<[u8]>`; `expose_secret()` calls are the
# grep target.
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
spinning_top = { version = "0.3.0", optional = true }
talc = { version = "5.0.3", optional = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
# marque-capco / marque-config / marque-engine / marque-rules /
# serde / serde_json are already declared under [dependencies] above
# and inherit into dev-dep scope automatically. Test files
# (tests/*.rs) reference them via the [dependencies] entries; no
# duplicate dev-dep declarations needed.
# The `wasm-pack test --node` parity harness uses wasm-bindgen-test
# to drive `lint_native` from inside the wasm32 target. Native parity
# (`tests/native_parity.rs`) covers algorithmic equivalence; this
# dev-dep enables byte-equal NDJSON parity across the actual WASM
# compilation target. Pinned via `=` to the version that the parity
# harness was verified against and the version Cargo.lock currently
# resolves. Tracks wasm-bindgen 0.2.118.
wasm-bindgen-test = "=0.3.70"

# marque-extract intentionally excluded — format extraction is caller's
# responsibility in WASM context; core operates on pre-extracted text.

[features]
# SIMD128 is enabled via the rustc target-feature flag in .cargo/config.toml rather than
# a Cargo feature — wasm-opt's `--enable-simd` is a post-processing pass that can only
# optimize SIMD instructions already present in the binary; it cannot generate them.
# The .cargo/config.toml entry sets `-C target-feature=+simd128` for wasm32-unknown-unknown,
# which activates SIMD code paths in memchr and other SIMD-aware crates at compile time.
#
# The `corpus-override` feature MUST NOT be declared here, and
# `marque-engine` above is pinned to `default-features = false`, so the
# override codepath cannot reach this artifact. Enforced further by a
# `compile_error!` guard under
# `#[cfg(all(target_arch = "wasm32", feature = "corpus-override"))]` in
# `src/lib.rs` — redundant with the missing-feature-declaration path, but
# closes the door a second time so an inadvertent future commit cannot
# drift this invariant silently (Constitution III WASM-safety: WASM
# cannot accept runtime config that expands the engine's semantic
# surface, e.g. decoder priors).
default = ["web"]

# Single-threaded allocator: WasmDynamicTalc grows via memory.grow, no spinlock overhead.
# Correct for browser web workers and single-threaded cloud deployments.
# When both talc_alloc and multi-threading are active, TalcLock takes precedence
# (see the cfg conditions in src/lib.rs).
talc_alloc = ["dep:talc"]

# Multi-threaded allocator: TalcLock with spinning_top. Requires SharedArrayBuffer
# (COOP + COEP response headers on the serving page) and the atomics target feature.
multi-threading = ["dep:spinning_top", "dep:talc"]

# Browser web worker target — panic hook + single-threaded WasmDynamicTalc.
web = ["console_error_panic_hook", "talc_alloc"]

# Cloud deployment profile — single-threaded WasmDynamicTalc, no panic hook.
cloud = ["talc_alloc"]

# Cloud + multi-threading: TalcLock for SharedArrayBuffer-capable cloud runtimes.
cloud_talc = ["cloud", "multi-threading"]

console_error_panic_hook = ["dep:console_error_panic_hook"]

# Debug allocator with heap counters (allocation/deallocation metrics via talc/counters).
# Uses TalcLock so counter access is safe from any thread; most useful in a browser
# devtools session. Enables console_error_panic_hook for readable panic messages.
talc_debug = [
  "console_error_panic_hook",
  "dep:spinning_top",
  "dep:talc",
  "talc/counters"
]

[lints]
workspace = true
