# SPDX-FileCopyrightText: 2026 Knitli Inc. <knitli@knitli.com>
# SPDX-License-Identifier: LicenseRef-MarqueLicense-1.0

[package]
name = "citation-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AST-based CI lint enforcing citation fidelity for marque."
license = "LicenseRef-MarqueLicense-1.0"
publish = false

[workspace]
# Out-of-workspace per Constitution III — this crate must not contaminate
# the WASM-safe closure of /home/user/marque/Cargo.toml's workspace.
# `pulldown-cmark` and `syn` are not WASM-relevant runtime deps; mirroring
# the `tools/masking-pin-lint/` pattern keeps the policy uniform across
# every CI lint binary and stops cargo's parent-walk during manifest
# resolution. Verify with
# `grep citation-lint /home/user/marque/Cargo.toml` returning no
# [workspace.members] entry.

[lib]
path = "src/lib.rs"

[[bin]]
name = "citation-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.117", features = ["extra-traits", "full", "visit"] }
walkdir = "2.5.0"

[dev-dependencies]
# Round-trip dev-dep: pulls in marque-scheme so the citation-lint scanner
# can be exercised against `marque_scheme::Citation::Display` output.
# `Citation` lives in marque-scheme so scheme-level catalog rows can
# carry typed citations without inverting the crate dependency graph.
# Dev-deps only — never ships in the citation-lint binary, so the
# Constitution III WASM-safe-closure rationale for keeping citation-lint
# out-of-workspace is preserved (dev-deps don't propagate to consumers,
# and citation-lint has no consumers — it's a CI lint binary).
marque-scheme = { path = "../../crates/scheme" }
tempfile = "3.27"

[profile.release]
lto = "thin"
