# SPDX-FileCopyrightText: 2026 Knitli Inc. <knitli@knitli.com>
# SPDX-License-Identifier: LicenseRef-MarqueLicense-1.0

[package]
name = "masking-pin-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
license = "LicenseRef-MarqueLicense-1.0"
description = "AST-based CI lint enforcing FR-039 masking-pin discipline for marque (engine-refactor-006)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "masking-pin-lint"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.5"
octocrab = "0.42"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = "thin"

[workspace]
# Out-of-workspace per Constitution III — this crate must not contaminate
# the WASM-safe closure of /home/user/marque/Cargo.toml's workspace.
# Adding `octocrab` (which transitively pulls reqwest+tokio+native-TLS) into
# the workspace member graph would cross-contaminate the WASM-safe set
# (`marque-ism`, `marque-core`, `marque-rules`, `marque-scheme`, `marque-capco`).
# The empty `[workspace]` table here stops cargo's parent-walk during manifest
# resolution. Verify with `grep masking-pin-lint /home/user/marque/Cargo.toml`
# returning no [workspace.members] entry.
