# SPDX-FileCopyrightText: 2026 Knitli Inc. <knitli@knitli.com>
# SPDX-License-Identifier: LicenseRef-MarqueLicense-1.0

[package]
name = "masking-pin-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AST-based CI lint enforcing masking-pin discipline for marque."
license = "LicenseRef-MarqueLicense-1.0"
publish = false

[workspace]
# Out-of-workspace per Constitution III — this crate must not contaminate
# the WASM-safe closure of /home/user/marque/Cargo.toml's workspace.
# Adding `octocrab` (which transitively pulls reqwest+tokio+native-TLS) into
# the workspace member graph would cross-contaminate the WASM-safe set
# (`marque-ism`, `marque-core`, `marque-rules`, `marque-scheme`, `marque-capco`).
# The empty `[workspace]` table here stops cargo's parent-walk during manifest
# resolution. Verify with `grep masking-pin-lint /home/user/marque/Cargo.toml`
# returning no [workspace.members] entry.

[lib]
path = "src/lib.rs"

[[bin]]
name = "masking-pin-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
octocrab = "0.51.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.117", features = ["extra-traits", "full", "visit"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = "thin"
